# lotrbfme-launchers

./: .gitignore  CMakeLists.txt  Makefile.mingw-w64  README.md  fixinst.c  launcher.c  launcher.cpp  launcher.h  lotrbfme2.rc  lotrbfme2ep1.rc
lotrbfme/: CMakeLists.txt  lotrbfme-launcher.rc  main.cpp  resource.h
lotrbfme2/: CMakeLists.txt  lotrbfme2-launcher.rc  main.cpp  resource.h
